--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sendgrid/mail": "^7.7.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "tailwind-clip-path": "^1.0.0",
     "tailwindcss": "^3.2.7"
   }
 }
