--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "devDependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "Blob": "^0.10.0",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
+    "form-data": "^4.0.0",
     "postcss": "^8.4.21",
     "tailwind-clip-path": "^1.0.0",
     "tailwindcss": "^3.2.7"
