--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@rainbow-me/rainbowkit": "^1.0.1",
     "@sendgrid/mail": "^7.7.0",
     "autoprefixer": "^10.4.14",
+    "ethers": "^6.4.1",
     "postcss": "^8.4.21",
     "tailwind-clip-path": "^1.0.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "viem": "^0.3.50",
+    "wagmi": "^1.1.0"
   }
 }
