--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.14",
     "ethers": "^6.4.2",
     "postcss": "^8.4.21",
+    "react-toastify": "^9.1.3",
     "tailwind-clip-path": "^1.0.0",
     "tailwindcss": "^3.2.7",
     "viem": "^0.3.50",
