--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@sendgrid/mail": "^7.7.0",
     "autoprefixer": "^10.4.14",
     "ethers": "^6.4.2",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.7",
     "postcss": "^8.4.21",
     "react-toastify": "^9.1.3",
     "tailwind-clip-path": "^1.0.0",
