--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "ethers": "^6.4.2",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
     "postcss": "^8.4.21",
     "react-toastify": "^9.1.3",
+    "swr": "^1.3.0",
     "tailwind-clip-path": "^1.0.0",
     "tailwindcss": "^3.2.7",
     "viem": "^0.3.50",
