--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@
 # production
 /build
 
+# images
+/public/nfts-default-images
+/public/nfts-images
+/public/nfts-metadata
+
 # misc
 .DS_Store
 *.pem
