--- a/package.json
+++ b/package.json
@@ -20,16 +20,21 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.0.1",
     "@sendgrid/mail": "^7.7.0",
     "autoprefixer": "^10.4.14",
+    "base-path-converter": "^1.0.2",
     "ethers": "^6.4.2",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
+    "fs": "^0.0.1-security",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "postcss": "^8.4.21",
+    "react-confirm-alert": "^3.0.6",
     "react-toastify": "^9.1.3",
+    "recursive-fs": "^2.1.0",
     "swr": "^1.3.0",
     "tailwind-clip-path": "^1.0.0",
     "tailwindcss": "^3.2.7",
