--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@types/node": "18.15.3",
@@ -32,6 +33,7 @@
     "fs": "^0.0.1-security",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
+    "next-sitemap": "^4.2.2",
     "postcss": "^8.4.21",
     "react-confirm-alert": "^3.0.6",
     "react-toastify": "^9.1.3",
