--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.0.1",
     "@sendgrid/mail": "^7.7.0",
+    "@vercel/analytics": "^1.1.3",
     "autoprefixer": "^10.4.14",
     "base-path-converter": "^1.0.2",
     "date-fns": "^2.30.0",
