--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.18",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.0.1",
     "@sendgrid/mail": "^7.7.0",
@@ -39,6 +40,7 @@
     "next-sitemap": "^4.2.2",
     "postcss": "^8.4.21",
     "react-confirm-alert": "^3.0.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
     "recursive-fs": "^2.1.0",
     "swr": "^1.3.0",
