--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@pinata/sdk": "^2.1.0",
-    "@rainbow-me/rainbowkit": "^1.0.1",
     "@sendgrid/mail": "^7.7.0",
     "@vercel/analytics": "^1.1.3",
+    "@web3modal/ethers": "^4.2.0",
     "autoprefixer": "^10.4.14",
     "base-path-converter": "^1.0.2",
     "date-fns": "^2.30.0",
@@ -46,7 +46,6 @@
     "swr": "^1.3.0",
     "tailwind-clip-path": "^1.0.0",
     "tailwindcss": "^3.2.7",
-    "viem": "^1.19.11",
-    "wagmi": "^1.1.0"
+    "viem": "^1.19.11"
   }
 }
