--- a/package.json
+++ b/package.json
@@ -6,46 +6,35 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.2"
-  },
-  "devDependencies": {
-    "@headlessui/react": "^1.7.18",
+    "@headlessui/react": "^2.0.3",
     "@headlessui/tailwindcss": "^0.2.0",
-    "@pinata/sdk": "^2.1.0",
-    "@sendgrid/mail": "^7.7.0",
-    "@vercel/analytics": "^1.1.3",
-    "@web3modal/ethers": "^4.2.0",
-    "autoprefixer": "^10.4.14",
-    "base-path-converter": "^1.0.2",
-    "date-fns": "^2.30.0",
-    "date-fns-tz": "^2.0.0",
+    "@web3modal/ethers": "^4.2.1",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "ethers": "^6.12.1",
     "flowbite": "^2.3.0",
-    "flowbite-react": "^0.7.2",
-    "fs": "^0.0.1-security",
+    "flowbite-react": "^0.9.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
-    "next-sitemap": "^4.2.2",
-    "postcss": "^8.4.21",
-    "react-confirm-alert": "^3.0.6",
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
-    "recursive-fs": "^2.1.0",
     "swr": "^1.3.0",
-    "tailwind-clip-path": "^1.0.0",
-    "tailwindcss": "^3.2.7",
-    "viem": "^1.19.11"
+    "tailwind-clip-path": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
