--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "ethers-decode-error": "^2.1.3",
     "postcss": "^8",
     "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.1",
