--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tailwind-clip-path": "^1.0.0"
   },
   "devDependencies": {
+    "@heroicons/react": "^2.2.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
