--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-pro-sidebar": "^1.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
     "swr": "^1.3.0",
@@ -33,10 +34,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "classnames": "^2.5.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "hamburger-react": "^2.5.2",
     "postcss": "^8",
+    "recharts": "^2.15.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
