--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "classnames": "^2.5.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "hamburger-react": "^2.5.2",
     "postcss": "^8",
+    "recharts": "^2.15.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
