--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@tanstack/react-query": "^5.71.3",
     "@web3modal/ethers": "^4.2.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
