--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
     "swr": "^1.3.0",
-    "tailwind-clip-path": "^1.0.0"
+    "tailwind-clip-path": "^1.0.0",
+    "twitter-api-v2": "^1.22.0"
   },
   "devDependencies": {
     "@date-fns/utc": "^2.1.0",
