--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
+    "react-tweet": "^3.2.2",
     "swr": "^1.3.0",
     "tailwind-clip-path": "^1.0.0",
-    "twitter-api-v2": "^1.22.0"
+    "twitter-api-v2": "^1.22.0",
+    "twitter-v2": "^1.1.0"
   },
   "devDependencies": {
     "@date-fns/utc": "^2.1.0",
