--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
     "react-tweet": "^3.2.2",
+    "react-twitter-embed": "^4.0.4",
     "swr": "^1.3.0",
     "tailwind-clip-path": "^1.0.0",
     "twitter-api-v2": "^1.22.0",
